# test-time-scaling-debunk

./: .gitignore  README.md  pyproject.toml
analysis/: effectiveness_on_reasoning_models.ipynb  generate_plots_for_models.py  is_it_linear_scaling.ipynb  other_keywords.ipynb  plot_utils.py
data/: results.csv
