[project]
name = "test-time-scaling-debunk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
